--- a/test.ipynb
+++ b/test.ipynb
@@ -12,7 +12,7 @@
     "import random\n",
     "import time\n",
     "import base64\n",
-    "from lawglance_main import Lawglance\n",
+    "from legacy.local_rag.lawglance_main import Lawglance\n",
     "from langchain_openai import ChatOpenAI, OpenAIEmbeddings\n",
     "from langchain_chroma import Chroma\n",
     "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
